fixing issues on mobile

--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -1,200 +1,236 @@
 * {
-    background-color: #595959;
+  background-color: #595959;
 }
 
 /* Header and hero of the website */
 .main-page-header {
-	background-image: url("../Images/keg-header.jpg"); 
-	background-size: cover;
-    height: 500px;
+  background-image: url("../Images/keg-header.jpg");
+  background-size: cover;
+  height: 500px;
 }
 
 header img {
-    height: 30%;
-    width: 75%;
-    float: right;
-    margin-top: 10%;
-    background-color: transparent;
+  height: 30%;
+  width: 75%;
+  float: right;
+  margin-top: 10%;
+  background-color: transparent;
 }
 
-.hero, .hero h2 {
-    flex-wrap: wrap;
-	display: flex;
-    color: white;
-    font-family: "lucida handwriting", "lucida console", sans-serif; 
-    font-size: 50px;
-   justify-content: center;
-   text-align: center;
-   background-color: transparent;
+.hero,
+.hero h2 {
+  flex-wrap: wrap;
+  display: flex;
+  color: white;
+  font-size: 50px;
+  justify-content: center;
+  text-align: center;
+  background-color: transparent;
 }
 
 .sidenav {
-    background-image: radial-gradient(rgb(242, 194, 132), rgb(57, 32, 0));
+  background-image: radial-gradient(rgb(242, 194, 132), rgb(57, 32, 0));
 }
 
 .navbar-div {
-    background-color: transparent;
+  background-color: transparent;
 }
 .sidenav {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .sidenav a {
-    font-family: 'Dosis', sans-serif; 
-    font-size: 20px;
-    text-align: center;
-    padding-top: 10px;
-    color: white;
-    height: 50px;
-    background-color: transparent;
+  font-family: "Dosis", sans-serif;
+  font-size: 15px;
+  text-align: center;
+  color: white;
+  height: 50px;
+  background-color: transparent;
+  border-right: solid white 1px;
+  padding: 3px;
 }
 
-.page-header, footer {
-    background-image: radial-gradient(rgb(242, 194, 132), rgb(57, 32, 0));
-    border-radius: 5px;
-    font-family: 'Dosis', sans-serif;
-    padding: 5px;
+.page-header,
+footer {
+  background-image: radial-gradient(rgb(242, 194, 132), rgb(57, 32, 0));
+  border-radius: 5px;
+  font-family: "Dosis", sans-serif;
+  padding: 5px;
 }
 
 .page-header h2 {
-    font-size: 40px;
-    text-align: center;
-    font-family: 'Dosis', sans-serif;
-    background-color: transparent;
-    color: white;
+  font-size: 40px;
+  text-align: center;
+  font-family: "Dosis", sans-serif;
+  background-color: transparent;
+  color: white;
 }
 
 .page-header p {
-    font-family: arial, sans-serif;
-    font-size: 20px;
-    text-align: justify;
-    text-justify: inter-word;
-    background-color: transparent;
+  font-family: arial, sans-serif;
+  font-size: 20px;
+  text-align: justify;
+  text-justify: inter-word;
+  background-color: transparent;
 }
 
 #growlers-link {
-    background-image: url(../Images/taps.avif);
-    background-size: 100% 300px;
-    height: 250px;
-    width: 100%;
+  background-image: url(../Images/taps.png);
+  background-size: 100% 300px;
+  height: 250px;
+  width: 100%;
 }
 
-#growlers-link h2, #slushies-link h2, #socials-title, #store-info h2 {
-    color: white;
-    font-family: 'Dosis', sans-serif;
-    font-size: 40px;
-    text-align: center;
-    background: transparent;
+#growlers-link h2,
+#slushies-link h2,
+#socials-title,
+#store-info h2 {
+  color: white;
+  font-family: "Dosis", sans-serif;
+  font-size: 40px;
+  text-align: center;
+  background: transparent;
 }
 
-#tap-board, #store-info {
-    background-image: radial-gradient(rgb(242, 194, 132), rgb(57, 32, 0));
-    margin: 20px;
-    text-align: center;
+#tap-board,
+#store-info {
+  background-image: radial-gradient(rgb(242, 194, 132), rgb(57, 32, 0));
+  margin: 20px;
+  text-align: center;
 }
 
 #growler-card {
-    text-align: center;
-    margin: 20px;
-    height: 550px;
-    width: 250px;
-   background-color: transparent;
-   display: inline-block;
-   float: none;
-   border: solid 2px white;
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: center;
+  text-align: center;
+  margin: 20px;
+  height: 550px;
+  width: 250px;
+  background-color: transparent;
+  display: inline-block;
+  float: none;
+  border: solid 2px white;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 #slushy-card {
-    text-align: center;
-    margin: 20px;
-    height: 250px;
-    width: 250px;
-   background-color: transparent;
-   display: inline-block;
-   float: none;
-   border: solid 2px white;
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: center;
+  text-align: center;
+  margin: 20px;
+  height: 250px;
+  width: 250px;
+  background-color: transparent;
+  display: inline-block;
+  float: none;
+  border: solid 2px white;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-#growler-card img, #slushy-card img {
-    height: 40%;
-    width: 75%;
-    background-color: white;
-    margin-top: 10px;
+#growler-card img,
+#slushy-card img {
+  height: 40%;
+  width: 75%;
+  background-color: white;
+  margin-top: 10px;
 }
 
-#growler-card h3, #slushy-card h3 {
-    font-size: 23px;
-    margin-top: 20px;
-    background-color: transparent;
-    font-family: 'Dosis', sans-serif;
-    color: white;
+#growler-card h3,
+#slushy-card h3 {
+  font-size: 23px;
+  margin-top: 20px;
+  background-color: transparent;
+  font-family: "Dosis", sans-serif;
+  color: white;
 }
-#growler-card p, #store-info ul, #store-info li {
-    font-size: 20px;
-    margin-top: 5px;
-    background-color: transparent;
+#growler-card p,
+#store-info ul,
+#store-info li {
+  font-size: 20px;
+  margin-top: 5px;
+  background-color: transparent;
 }
 
-p, ul {
-    background-color: transparent;
-    font-family: 'Dosis', sans-serif;
-    color: white;
+p,
+ul {
+  background-color: transparent;
+  font-family: "Dosis", sans-serif;
+  color: white;
 }
 
 #growler-card p {
-    text-align: justify;
+  text-align: justify;
 }
 
 #slushies-link {
-display: flex;
-justify-content: center;
-align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #slushies-link img {
-    height: 400px;
-    width: 100%;
+  height: 400px;
+  width: 100%;
 }
 
 #socials-title {
-    margin: 10px;
+  margin: 10px;
 }
 
 #socials-div {
-    text-align: center;
-    display: flex;
-    flex-wrap: wrap;
-
- }   
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+}
 
 .social-media-links img {
-    height: 200px;
-    width: 200px;
-    margin-top: 10px;
-} 
+  height: 200px;
+  width: 200px;
+  margin-top: 10px;
+}
 
 footer {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    font-family: 'Dosis', sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-family: "Dosis", sans-serif;
 }
 
 footer img {
-    height: 100px;
-    width: 100px;
-    background-color: transparent;
+  height: 100px;
+  width: 100px;
+  background-color: transparent;
 }
 
 #store-info a {
-    color: white;
+  color: white;
+}
+
+@media only screen and (max-width: 600px) {
+    .main-page-header {
+        background-image: url("../Images/keg-header.jpg");
+        background-size: cover;
+        height: 250px;
+      }
+      
+      header img {
+        height: 30%;
+        width: 75%;
+        float: right;
+        margin-top: 30%;
+        background-color: transparent;
+      }
+
+      .sidenav {
+        font-family: "Dosis", sans-serif;
+        font-size: 15px;
+        text-align: center;
+        padding: 10px;
+        color: white;
+        background-color: transparent;
+      }
 }
